# monkey_brain

./: README.md  matrix_mini_batch.ipynb
monkey_brain/: Cargo.toml
monkey_brain/src/: lib.rs  load_mnist.rs  main.rs  net.rs
python_impl/: net.py  train_mnist.py
