[package]
name = "monkey_brain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-rand = "0.14.0"
ndarray = "0.15.6"
# ndarray = {version = "0.15.6", features = ["blas"]}
# blas-src = { version = "0.8", features = ["openblas"] }
# openblas-src = { version = "0.10", features = ["cblas", "system"] }
rand = "0.8.5"
byteorder = "1.4.3"
flate2 = "1.0.25"